# nova-clone

./: .prettierignore  LICENSE  README.md  history.html  index.html  package-lock.json  package.json  settings.html  sync-version.mjs  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: history.ts  main.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/clone/: mod.rs
src-tauri/src/jira/: mod.rs
src/core/: connection-ui.ts  errors.test.ts  errors.ts  jira-client.ts  notify.ts  state.test.ts  state.ts  store.test.ts  store.ts  validate.test.ts  validate.ts
src/core/i18n/: i18n.ts
src/core/i18n/locales/: en.json  uk.json
src/core/storage/: connections.test.ts  connections.ts  history.test.ts  history.ts  index.ts  store-access.ts
src/ui/: confirm-dialog.ts  toast.ts
src/ui/styles/: main.scss
src/ui/styles/base/: _globals.scss  _typography.scss
src/ui/styles/components/: _badges.scss  _buttons.scss  _cards.scss  _confirm-dialog.scss  _inputs.scss  _progress.scss  _segmented.scss  _table.scss  _toast.scss
src/ui/styles/layout/: _container.scss  _grid.scss  _sidebar.scss  _topbar.scss
src/ui/styles/media/: _responsive.scss
src/ui/styles/pages/: _about.scss  _clone.scss  _connect.scss  _history.scss  _settings.scss
src/ui/styles/themes/: _variables.scss
