[package]
name = "nova-clone"
version = "0.1.2"
description = "Nova Clone — Jira Cloud issue cloner"
authors = ["Rostyslav Udovenko"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri-plugin-log = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
